--- a/PCA.ipynb
+++ b/PCA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCA.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOgqKGfrWgTqSV5gfoYc1LK",
+      "authorship_tag": "ABX9TyPR6U8m86cnqQ5p4niy1tpA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -347,7 +347,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 480
         },
-        "outputId": "c8189b28-5934-4164-a8fb-beb61972b2d9"
+        "outputId": "4bc1b6aa-7844-43fb-9ed3-ea5f72e1961d"
       },
       "source": [
         "#here we find the 3 most important componenents using scikit learn\n",
@@ -360,6 +360,8 @@
         "fig = plt.figure(1, figsize=(8, 6))\n",
         "ax = Axes3D(fig, elev=-150, azim=110)\n",
         "X_reduced = PCA(n_components=3).fit_transform(data)\n",
+        "principalDF= pd.DataFrame(data=X_reduced,columns=['Component 1','Component 2','Component 3'])\n",
+        "\n",
         "ax.scatter(X_reduced[:, 0], X_reduced[:, 1], X_reduced[:, 2], c=data.target,\n",
         "           cmap=plt.cm.Set1, edgecolor='k', s=40)\n",
         "ax.set_title(\"First three PCA directions\")\n",
@@ -368,9 +370,9 @@
         "ax.set_ylabel(\"2nd eigenvector\")\n",
         "ax.w_yaxis.set_ticklabels([])\n",
         "ax.set_zlabel(\"3rd eigenvector\")\n",
-        "ax.w_zaxis.set_ticklabels([])\n"
+        "ax.w_zaxis.set_ticklabels([])"
       ],
-      "execution_count": 28,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -382,7 +384,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 41
         },
         {
           "output_type": "display_data",
@@ -439,13 +441,52 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "lQIL8EOuaiz_",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 255
+        },
+        "outputId": "294576ca-cc80-4364-8618-fc9dcb3afc05"
+      },
+      "source": [
+        "#To see what we're working with, here are the principal components! These explain the variability in the data. \n",
+        "print(principalDF)"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "     Component 1  Component 2  Component 3\n",
+            "0     -12.267726     2.870002    14.968778\n",
+            "1       2.689662   -39.873863     0.878693\n",
+            "2     -42.950640   -23.639530     1.759624\n",
+            "3     -10.945206   -28.441101    -7.043844\n",
+            "4     106.978583   -15.879436   -14.862019\n",
+            "..           ...          ...          ...\n",
+            "298    -4.553591    27.494199     5.374418\n",
+            "299    16.428494    12.925387   -25.582195\n",
+            "300   -51.963290    13.329155    15.487471\n",
+            "301  -114.755392    36.439808     0.127538\n",
+            "302   -10.395712   -23.296238     2.393497\n",
+            "\n",
+            "[303 rows x 3 columns]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "eTkyvN3eH6FB",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 395
         },
-        "outputId": "369684f6-3ce4-44de-b2db-858894213911"
+        "outputId": "0d908a15-99b3-4029-d100-d4e95650f902"
       },
       "source": [
         "from mpl_toolkits.mplot3d import Axes3D\n",
@@ -468,6 +509,7 @@
         "fig = plt.figure(1, figsize=(8, 6))\n",
         "ax = Axes3D(fig, elev=-150, azim=110)\n",
         "X_reduced = PCA(n_components=3).fit_transform(data)\n",
+        "\n",
         "ax.plot(X_reduced[:0],response,color=\"k\",label=\"regression\")\n",
         "ax.scatter(X_reduced[:, 0], X_reduced[:, 1], X_reduced[:, 2], c=data.target,\n",
         "           cmap=plt.cm.Set1, edgecolor='k', s=40)\n",
@@ -492,7 +534,7 @@
         "ax.set_zlabel(\"3rd eigenvector\")\n",
         "ax.w_zaxis.set_ticklabels([])"
       ],
-      "execution_count": 33,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "error",
@@ -501,7 +543,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-33-5977a3effd44>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mYtest\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX_reduced\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mregr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlinear_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLinearRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mregr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXtrain\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mYtrain\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mypred\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mregr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXtest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-36-1fa0285abffe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mYtest\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mX_reduced\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mregr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlinear_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLinearRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mregr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXtrain\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mYtrain\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mypred\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mregr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXtest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/linear_model/_base.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    490\u001b[0m         \u001b[0mn_jobs_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_jobs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    491\u001b[0m         X, y = check_X_y(X, y, accept_sparse=['csr', 'csc', 'coo'],\n\u001b[0;32m--> 492\u001b[0;31m                          y_numeric=True, multi_output=True)\n\u001b[0m\u001b[1;32m    493\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    494\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0msample_weight\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_X_y\u001b[0;34m(X, y, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    753\u001b[0m                     \u001b[0mensure_min_features\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mensure_min_features\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    754\u001b[0m                     \u001b[0mwarn_on_dtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mwarn_on_dtype\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 755\u001b[0;31m                     estimator=estimator)\n\u001b[0m\u001b[1;32m    756\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmulti_output\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    757\u001b[0m         y = check_array(y, 'csr', force_all_finite=True, ensure_2d=False,\n",
             "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    584\u001b[0m                              \u001b[0;34m\" minimum of %d is required%s.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    585\u001b[0m                              % (n_samples, array.shape, ensure_min_samples,\n\u001b[0;32m--> 586\u001b[0;31m                                 context))\n\u001b[0m\u001b[1;32m    587\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    588\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mensure_min_features\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
